--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.2",
   "main": "index.js",
   "types": "index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KittyCAD/kcl.ts.git"
+  },
   "napi": {
     "name": "kcl.ts",
     "triples": {
