--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "types": "index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/KittyCAD/kcl.ts.git"
+    "url": "https://github.com/KittyCAD/kcl.ts"
   },
   "napi": {
     "name": "kcl.ts",
